--- a/trustpoint/templates/signer/signer_detail.html
+++ b/trustpoint/templates/signer/signer_detail.html
@@ -126,7 +126,7 @@
         <div class="card-footer d-flex justify-content-between align-items-center">
             <div class="tp-card-btn-footer m-1">
                 <a href="{% url 'signer:signerList' %}" class="btn btn-secondary">{% trans "← Back to Signer List" %}</a>
-                <a href="{% url 'signer:editSigner' signer.pk %}" class="btn btn-warning">{% trans "Edit Signer" %}</a>
+                <a href="{% url 'signer:editSigner' signer.pk %}" class="btn btn-primary">{% trans "Edit Signer" %}</a>
             </div>
         </div>
     </div>
