--- a/trustpoint/templates/trustpoint/base.html
+++ b/trustpoint/templates/trustpoint/base.html
@@ -76,18 +76,14 @@
                 </div>
             </div>
             <div class="tp-menu-group">
-                <a href="{% url 'signer:signerList' %}" class="tp-menu-head {% if page_category == 'devices' %}tp-menu-active{% endif %}">
-                    <svg class="bi" fill="currentColor" role="img">
-                        <use href="{% static 'img/icons.svg' %}#icon-pens"></use></svg>
+                <a href="{% url 'signer:signerList' %}" class="tp-menu-head {% if page_category == 'signers' %}tp-menu-active{% endif %}">
+                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen" viewBox="0 0 16 16">
+  <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001m-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708z"/>
+</svg>
                     {% translate "Signing" %}
-                    <div class="btn-collapse" data-category="devices"
-                        aria-expanded="{% if page_category == 'devices' %}true{% else %}false{% endif %}">
-                    </div>
+
                 </a>
-                <div class="tp-menu-collapse {% if page_category == 'devices' %}show{% endif %}">
-                    <a href="{% url 'signer:addSigner' %}" class="tp-menu-item {% if page_name == 'devices' %}tp-menu-active{% endif %}">{% trans 'Devices' %}</a>
-                    <a href="{% url 'devices:opc_ua_gds' %}" class="tp-menu-item {% if page_name == 'opc_ua_gds' %}tp-menu-active{% endif %}">{% trans 'OPC UA GDS' %}</a>
-                </div>
+
             </div>
 
             <div class="tp-menu-group">
