--- a/trustpoint/templates/management/tls.html
+++ b/trustpoint/templates/management/tls.html
@@ -3,156 +3,112 @@
 {% load i18n %}
 
 {% block content %}
-
-    <div class="card">
-        <div class="card-header">
-            <h1>{% trans "TLS Settings" %}</h1>
-        </div>
-        <div class="card-body">
-            <div class="tp-card-centered-content">
-                {% if certificate %}
-                    <h3>{% trans "Certificate Information" %}</h3>
-                                        <br>
-
-
-                    <div class="tp-kvp-list">
-                        <div>
-                            <div>{% trans "Common Name (CN)" %}</div>
-                            <div>{{ certificate.common_name }}</div>
-                        </div>
-                    </div>
-                    <hr>
-
-                    <h3>{% trans "Issuer Details" %}</h3>
-                                        <br>
-
-                    <div class="tp-kvp-list">
-                        <div>
-                            <div>{% trans "Country (C)" %}</div>
-                            <div>{{ issuer_details.country|default:_("N/A") }}</div>
-                        </div>
-                        <div>
-                            <div>{% trans "Organization (O)" %}</div>
-                            <div>{{ issuer_details.organization|default:_("N/A") }}</div>
-                        </div>
-                        <div>
-                            <div>{% trans "Common Name (CN)" %}</div>
-                            <div>{{ issuer_details.common_name|default:_("N/A") }}</div>
-                        </div>
-                    </div>
-                    <hr>
-
-                    <h3>{% trans "Validity" %}</h3>
-                                        <br>
-
-                    <div class="tp-kvp-list">
-                        <div>
-                            <div>{% trans "Not Before" %}</div>
-                            <div>{{ certificate.not_valid_before }}</div>
-                        </div>
-                        <div>
-                            <div>{% trans "Not After" %}</div>
-                            <div>{{ certificate.not_valid_after }}</div>
-                        </div>
-                    </div>
-                    <hr>
-
-                    <h3>{% trans "Subject Alternative Names (SAN)" %}</h3>
-                                        <br>
-
-                    <div class="tp-kvp-list">
-                        <div>
-                            <div>
-                                {% trans "DNS Names" %}
-                            </div>
-                            <div>
-                                {% if san_dns_names %}
-                                    {{ san_dns_names|join:", " }}
-                                {% else %}
-                                    <em>{% trans "No DNS names listed in SAN." %}</em>
-                                {% endif %}
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="tp-kvp-list">
-                        <div>
-                            <div>
-                                {% trans "IP Addresses" %}
-                            </div>
-                            <div>
-                                {% if san_ips %}
-                                    {{ san_ips|join:", " }}
-                                {% else %}
-                                    <em>{% trans "No IP addresses listed in SAN." %}</em>
-                                {% endif %}
-                            </div>
-                        </div>
-                    </div>
-                    <hr>
-
-                    <h3>{% trans "Miscellaneous" %}</h3>
-                                        <br>
-                    <div class="tp-kvp-list">
-                        <div>
-                            <div>{% trans "Serial Number" %}</div>
-                            <div>{{ certificate.serial_number }}</div>
-                        </div>
-                        <div>
-                            <div>{% trans "Signature Algorithm" %}</div>
-                            <div>{{ certificate.signature_algorithm }}</div>
-                        </div>
-                        <div>
-                            <div>{% trans "Download" %}</div>
-                            <div>
-                                <a href="{% url 'pki:trustpoint-tls-server-download' %}">
-                                    {% trans "PEM (cert)" %}
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <hr>
-
-                    <h3>{% trans "Preferred IPv4 Address" %}</h3>
-                    <br>
-
-                    <div class="tp-kvp-list">
-                        <div>
-                            <div>{% trans "Preferred IPv4 Address" %}</div>
-                            <div>
-                                <form method="post" action="{% url 'management:tls' %}" id="preferred_ipv4_configuration">
-                                    {% csrf_token %}
-                                    <div>
-                                        <div class="btn-group" role="group" aria-label="IPv4 Address Selection">
-                                            {% for ip, label in form.ipv4_address.field.choices %}
-                                                <button class="btn {% if form.ipv4_address.value == ip %}btn-primary{% else %}btn-outline-primary{% endif %}"
-                                                        name="ipv4_address"
-                                                        value="{{ ip }}">
-                                                    {{ label }}
-                                                </button>
-                                            {% endfor %}
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="tp-kvp-list">
-                        <div>
-                            <div>{% trans "Usage" %}</div>
-                            <div>
-                                {% trans "The preferred IPv4 address is used for the code blocks and examples displayed in the help section." %}
-                            </div>
-                        </div>
-                    </div>
-
-
+<div class="card" style="max-height: 100%; display: flex; flex-direction: column;">
+  <div class="card-header">
+      <h1>{% trans 'TLS Certificates' %}</h1>
+  </div>
+  <div class="card-body text-start" style="overflow-y: auto; flex-grow: 1; max-height: 90%;">
+    <div>
+      <table class="table">
+        <thead>
+          <tr>
+              <th id="checkbox-column"><input type="checkbox"/></th>
+              <th>
+                  <a href="?sort={% if current_sort == 'common_name' %}-{% endif %}common_name">
+                      {% trans 'Common Name' %}
+                  </a>
+              </th>
+              <th>
+                  <a href="?sort={% if current_sort == 'not_valid_after' %}-{% endif %}not_valid_after">
+                      {% trans 'Not valid after (UTC)' %}
+                  </a>
+              </th>
+              <th>
+                  <a href="?sort={% if current_sort == 'spki_algorithm' %}-{% endif %}spki_algorithm">
+                      {% trans 'Public Key Algorithm' %}
+                  </a>
+              </th>
+              <th>
+                  <a href="?sort={% if current_sort == 'spki_key_size' %}-{% endif %}spki_key_size">
+                      {% trans 'Public Key Size' %}
+                  </a>
+              </th>
+              <th>
+                  <a href="?sort={% if current_sort == 'spki_ec_curve' %}-{% endif %}spki_ec_curve">
+                      {% trans 'Public Key Curve (ECC)' %}
+                  </a>
+              </th>
+              <th>
+                  <a
+                      href="?sort={% if current_sort == 'certificate_status' %}-{% endif %}certificate_status">
+                      {% trans 'Status' %}
+                  </a>
+              </th>
+              <th>
+                  <a href="?sort={% if current_sort == 'created_at' %}-{% endif %}created_at">
+                      {% trans 'Created at' %}
+                  </a>
+              </th>
+              <th>
+                  <a href="?sort={% if current_sort == 'is_self_signed' %}-{% endif %}is_self_signed">
+                      {% trans 'Self-Signed' %}
+                  </a>
+              </th>
+              <th>{% trans 'Details' %}</th>
+              <th>{% trans 'Download' %}</th>
+              <th>{% trans 'In Use' %}</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for tls_certificate in tls_certificates %}
+          <tr>
+              <td class="row_checkbox">
+                  <input type="checkbox" name="row_checkbox" value="{{ tls_certificate.id }}" />
+              </td>
+              <td>{{ tls_certificate.common_name }}</td>
+              <td>{{ tls_certificate.not_valid_after }}</td>
+              <td>{{ tls_certificate.spki_algorithm }}</td>
+              <td>{{ tls_certificate.spki_key_size }}</td>
+              <td>{% if tls_certificate.spki_ec_curve%} {{ tls_certificate.spki_ec_curve }} {% else %}—{% endif %}</td>
+              <td>{{ tls_certificate.certificate_status }}</td>
+              <td>{{ tls_certificate.created_at }}</td>
+              <td>{% if tls_certificate.is_self_signed == 1 %} ✔ {% else %} ✘ {% endif %}</td>
+              <td><a href="{% url 'pki:certificate-detail' pk=tls_certificate.id %}" class="btn btn-primary tp-table-btn w-100">{% trans 'Details' %}</a></td>
+              <td><a href="{% url 'pki:certificate-download' pk=tls_certificate.id %}" class="btn btn-primary tp-table-btn w-100">{% trans 'Download' %}</a></td>
+               <td>
+                {% if tls_certificate.sha256_fingerprint != certificate.sha256_fingerprint %}
+                <form method="POST" action="{% url 'management:activate-tls' pk=tls_certificate.id %}">
+                  {% csrf_token %}
+                  <button type="submit" class="btn btn-primary tp-table-btn w-100">{% trans 'Activate' %}</button>
+                </form>
                 {% else %}
-                    <p>{% trans "No active certificate available to display." %}</p>
+                 ✔
                 {% endif %}
-            </div>
-        </div>
-    </div>
+              </td>
+          </tr>
+          {% empty %}
+          <tr>
+              <td colspan="11" class="middle">{% trans 'No certificates are available. Add an Issuing CA first.' %}</td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
 
+      {% include 'trustpoint/pagination.html' %}
+    </div>
+  </div>
+  <div class="card-footer d-flex justify-content-between">
+      <div class="tp-card-btn-footer m-1">
+        <button type="button" class="btn btn-primary tp-table-select-btn" data-tp-url="download/tar.gz">
+            {% trans "Download selected (tar.gz)" %}
+        </button>
+        <button type="button" class="btn btn-primary tp-table-select-btn" data-tp-url="download/zip">
+            {% trans "Download selected (zip)" %}
+        </button>
+         <a class="btn btn-primary ms-2" href="{% url 'management:tls-add-method_select' %}">
+              {% trans 'Add new TLS Certificate' %}
+          </a>
+      </div>
+  </div>
+</div>
 {% endblock %}
