--- a/trustpoint/templates/pki/certificates/details.html
+++ b/trustpoint/templates/pki/certificates/details.html
@@ -15,17 +15,17 @@
     <div class="card-body text-start" style="overflow-y: auto; flex-grow: 1; padding-top: 0;">
         <ul class="nav nav-tabs mt-3" role="tablist">
             <li class="nav-item" role="presentation">
-                <button class="nav-link active" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1-panel" type="button" role="tab">{% trans "Profile" %}</button>
+                <button class="nav-link active" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1-panel" type="button" role="tab">{% trans "General" %}</button>
             </li>
-
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="tab3-tab" data-bs-toggle="tab" data-bs-target="#tab3-panel" type="button" role="tab">{% trans "Key & Signature" %}</button>
+                <button class="nav-link" id="tab2-tab" data-bs-toggle="tab" data-bs-target="#tab2-panel" type="button" role="tab">{% trans "Validity" %}</button>
             </li>
-               <li class="nav-item" role="presentation">
-                <button class="nav-link" id="tab4-tab" data-bs-toggle="tab" data-bs-target="#tab4-panel" type="button" role="tab">{% trans "Extensions" %}</button>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="tab3-tab" data-bs-toggle="tab" data-bs-target="#tab3-panel" type="button" role="tab">{% trans "Key" %}</button>
+            </li><li class="nav-item" role="presentation">
+                <button class="nav-link" id="tab4-tab" data-bs-toggle="tab" data-bs-target="#tab4-panel" type="button" role="tab">{% trans "Signature" %}</button>
             </li>
-
-             <li class="nav-item" role="presentation">
+            <li class="nav-item" role="presentation">
                 <button class="nav-link" id="tab5-tab" data-bs-toggle="tab" data-bs-target="#tab5-panel" type="button" role="tab">{% trans "Hierarchy & Additional" %}</button>
             </li>
         </ul>
@@ -33,31 +33,31 @@
             <div class="tab-pane fade show active" id="tab1-panel" role="tabpanel">
                 <div class="tp-card-centered-content">
                     {% include 'pki/certificates/components/subject_and_names.html' %}
-
+                    {% include 'pki/certificates/components/extensions/subject_alternative_name_extension_content.html' %}
                     {% include 'pki/certificates/components/general.html' %}
-                     {% include 'pki/certificates/components/validity.html' %}
                 </div>
             </div>
-
-
+            <div class="tab-pane fade" id="tab2-panel" role="tabpanel">
+                <div class="tp-card-centered-content">
+                    {% include 'pki/certificates/components/validity.html' %}
+                    {% include 'pki/certificates/components/extensions/subject_alternative_name_extension.html' %}
+                    {% include 'pki/certificates/components/extensions/issuer_alternative_name_extension.html' %}
+                    {% include 'pki/certificates/components/extensions/basic_constraints_extension.html' %}
+                    {% include 'pki/certificates/components/extensions/key_usage_extension.html' %}
+                </div>
+            </div>
             <div class="tab-pane fade" id="tab3-panel" role="tabpanel">
                 <div class="tp-card-centered-content">
                     {% include 'pki/certificates/components/subject_public_key_info.html' %}
-                      {% include 'pki/certificates/components/signature.html' %}
+
                 </div>
             </div>
-  <div class="tab-pane fade" id="tab4-panel" role="tabpanel">
+            <div class="tab-pane fade" id="tab4-panel" role="tabpanel">
                 <div class="tp-card-centered-content">
 
-
-                    {% include 'pki/certificates/components/extensions/key_usage_extension.html' %}
-                               {% include 'pki/certificates/components/extensions/issuer_alternative_name_extension.html' %}
-                        {% include 'pki/certificates/components/extensions/subject_alternative_name_extension.html' %}
-                    {% include 'pki/certificates/components/extensions/basic_constraints_extension.html' %}
+                    {% include 'pki/certificates/components/signature.html' %}
                 </div>
             </div>
-
-
             <div class="tab-pane fade" id="tab5-panel" role="tabpanel">
                 <div class="tp-card-centered-content">
                     {% include 'pki/certificates/components/hierarchy.html' %}
@@ -66,41 +66,16 @@
                     {% endif %}
                 </div>
             </div>
-
         </div>
     </div>
     <div class="card-footer d-flex justify-content-between align-items-center">
         <div class="tp-card-btn-footer m-1">
             <button type="button" value="Back" class="btn btn-secondary btn-half" onClick="history.back()">{% trans 'Back' %}</button>
             <a href="{% url 'pki:certificates' %}" class="btn btn-secondary btn-half">{% trans 'Cancel' %}</a>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#pemModal">{% trans 'Show PEM' %}</button>
             <a href="{% url 'pki:certificate-download' pk=cert.id %}" class="btn btn-primary">{% trans 'Download' %}</a>
         </div>
     </div>
 </div>
-
-<!-- PEM Modal -->
-<div class="modal fade" id="pemModal" tabindex="-1" aria-labelledby="pemModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="pemModalLabel">{% trans "Certificate PEM" %}</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="{% trans 'Close' %}"></button>
-            </div>
-            <div class="modal-body">
-                <div class="copy-container" style="position: relative;">
-                    <pre class="command-text" style="background-color: #1e1e1e; color: #d4d4d4; padding: 15px; border-radius: 5px; overflow-x: auto; font-family: 'Courier New', monospace; font-size: 12px; max-height: 500px;">{{ cert.cert_pem }}</pre>
-                    <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard" style="position: absolute; top: 10px; right: 10px;">
-                        <svg class="icon icon-copy" width="24" height="24" fill="currentColor">
-                            <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
-                        </svg>
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
 
 <style>.nav-tabs {
     border-bottom: 1px solid #34373c;
@@ -108,7 +83,7 @@
 }
 
 .nav-tabs .nav-link {
-
+    /* Remove borders/backgrounds! */
     border: none !important;
     border-bottom: 3px solid transparent !important;
     background: none !important;
