--- a/trustpoint/templates/setup_wizard/create_super_user.html
+++ b/trustpoint/templates/setup_wizard/create_super_user.html
@@ -28,11 +28,9 @@
 
     <div class="card tp-card-setup-wizard text-center">
         <div class="card-header">
-            <h1>{% trans "Trustpoint - Setup Wizard" %}</h1>
+            <h1>{% trans "Create Super-User" %}</h1>
         </div>
         <div class="card-body pt-3 pb-4">
-            <h2>{% trans 'Create Super-User' %}</h2>
-            <hr>
             <form method="POST" class="text-start">
                 {% csrf_token %}
                 <fieldset class="form-group tp-form-group">
