--- a/trustpoint/templates/setup_wizard/restore_options.html
+++ b/trustpoint/templates/setup_wizard/restore_options.html
@@ -26,10 +26,9 @@
 
 <div class="card tp-card-setup-wizard text-center">
     <div class="card-header">
-        <h1>{% trans "Trustpoint - Setup Wizard" %}</h1>
+        <h1>{% trans "Restore Database backup" %}</h1>
     </div>
     <div class="card-body pt-3 pb-4">
-        <h2>{% trans 'Restore Database backup' %}</h2>
         <hr class="mb-4">
 
         <a href="" class="btn btn-secondary primary d-flex justify-content-center disabled">{% trans 'Trustpoint update'
