--- a/trustpoint/templates/pki/certificates/components/general.html
+++ b/trustpoint/templates/pki/certificates/components/general.html
@@ -19,5 +19,13 @@
             <div>{% trans 'Certificate Status' %}</div>
             <div>{{ cert.certificate_status.label }}</div>
         </div>
+    <div>
+            <div>{% trans 'Signature Algorithm' %}</div>
+            <div>{{ cert.signature_algorithm }}</div>
+        </div>
+        <div>
+            <div>{% trans 'Not valid after' %}</div>
+            <div>{{ cert.not_valid_after }}</div>
+        </div>
     </div>
 {% endblock general %}
