categorising data in certificate details

--- a/trustpoint/templates/pki/certificates/components/general.html
+++ b/trustpoint/templates/pki/certificates/components/general.html
@@ -25,13 +25,15 @@
             <div>{{ cert.signature_algorithm }}</div>
         </div>
 
-
-            <div>
+        <div>
             <div>{% trans 'Self-Signed' %}</div>
             <div>{{ cert.is_self_signed }}</div>
         </div>
 
-
+        <div>
+            <div>{% trans 'Not valid after' %}</div>
+            <div>{{ cert.not_valid_after }}</div>
+        </div>
     </div>
 
 {% endblock general %}
